syntax = "proto3";

package blink;

option go_package = "blink/api/proto/pb";

enum BlinkStatus {
    BLINK_STATUS_UNSPECIFIED = 0;
    BLINK_STATUS_ON_COOLDOWN = 1;
    BLINK_STATUS_SUCCESS = 2; // blinked successfully
    BLINK_STATUS_PENDING = 3; // attempting to blink
    BLINK_STATUS_CRASHED = 4; // rnged
    BLINK_STATUS_FAILURE = 5; // internal error
};

message BlinkEvaluationRequest {
    string ip = 1;
};

message BlinkEvaluationReply {
    BlinkStatus status = 1;
    double remaining_cooldown = 2;
};

service BlinkService {
    rpc BlinkEvaluation(BlinkEvaluationRequest) returns (BlinkEvaluationReply);
};
